Fixed uncommented notes breaking things

--- a/tensorflow/contrib/cmake/CMakeLists.txt
+++ b/tensorflow/contrib/cmake/CMakeLists.txt
@@ -311,10 +311,6 @@ if(tensorflow_ENABLE_GRPC_SUPPORT)
     include_directories(${boringssl_INCLUDE_DIR})
   endif()
   find_package(gRPC)
-    gRPC::grpc++_unsecure
-    gRPC::grpc_unsecure
-    gRPC::gpr
-  include(grpc)
   include_directories(${GRPC_INCLUDE_DIRS})
   pkg_check_modules(CARES REQUIRED libcares)
   # Place boringssl after grpc as grpc depends on boringssl.
@@ -606,3 +602,14 @@ EXPORT(PACKAGE Tensorflow)
 SET(TENSORFLOW_INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/include/tensorflow")
 CONFIGURE_FILE(TensorflowConfig.cmake.in "${PROJECT_BINARY_DIR}/TensorflowConfig.cmake")
 INSTALL(FILES "${PROJECT_BINARY_DIR}/TensorflowConfig.cmake" DESTINATION "share/tensorflow/cmake")
+
+MESSAGE(STATUS "<<< Gentoo configuration >>>
+Build type      ${CMAKE_BUILD_TYPE}
+Install path    ${CMAKE_INSTALL_PREFIX}
+Compiler flags:
+C               ${CMAKE_C_FLAGS}
+C++             ${CMAKE_CXX_FLAGS}
+Linker flags:
+Executable      ${CMAKE_EXE_LINKER_FLAGS}
+Module          ${CMAKE_MODULE_LINKER_FLAGS}
+Shared          ${CMAKE_SHARED_LINKER_FLAGS}\n")
