--- a/tensorflow/contrib/cmake_python/CMakeLists.txt
+++ b/tensorflow/contrib/cmake_python/CMakeLists.txt
@@ -702,6 +702,7 @@ set (pywrap_tensorflow_internal_src
     "${tensorflow_source_dir}/tensorflow/python/util/util.cc"
     "${tensorflow_source_dir}/tensorflow/cc/framework/ops.cc"
     "${tensorflow_source_dir}/tensorflow/cc/framework/scope.cc"
+    "${tensorflow_source_dir}/tensorflow/c/python_api.cc"
     "${CMAKE_CURRENT_BINARY_DIR}/pywrap_tensorflow_internal.cc"
 )
 
