--- a/tensorflow/contrib/cmake/CMakeLists.txt
+++ b/tensorflow/contrib/cmake/CMakeLists.txt
@@ -239,6 +239,7 @@ find_package(highwayhash REQUIRED)
 find_package(nsync REQUIRED)
 set(protobuf_MODULE_COMPATIBLE ON)
 find_package(protobuf REQUIRED)
+find_package(bigtable_client 0.2.0 REQUIRED)
 #include(re2)
 pkg_check_modules(RE2 REQUIRED re2)
 include(cub)
